feat(app): Add shutdown to service2
